--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,39 @@
+@import url("https://fonts.googleapis.com/css2?family=Comfortaa:wght@300;400;500;600;700&display=swap");
+
+* {
+  margin: 0;
+  padding: 0;
+  font-family: "Comfortaa", cursive;
+  font-weight: bold;
+}
+
 .App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
   display: flex;
-  flex-direction: column;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
+  flex-direction: column;
+  height: 100vh;
+
+  background-image: url("./joker-woman.jpg");
+  background-size: cover;
+}
+
+.joke {
+  backdrop-filter: blur(15px);
+  font-size: 32px;
   color: white;
+
+  border-radius: 50px;
+  padding: 50px;
+  margin: 30px 15px;
 }
 
-.App-link {
-  color: #61dafb;
-}
+.punchline {
+  backdrop-filter: blur(15px);
+  font-size: 28px;
+  color: white;
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+  border-radius: 50px;
+  padding: 50px;
+  margin: 30px 15px;
 }
